(I-20-6) Fix input date z-index

--- a/src/stories/organisms/reserveDetails/reserveDetails.scss
+++ b/src/stories/organisms/reserveDetails/reserveDetails.scss
@@ -15,7 +15,9 @@
   flex-direction: row;
   justify-content: space-between;
 }
-
+.reserve-details--input-date {
+  z-index: 3;
+}
 .reserve-details--input1 {
   margin-left: 16px;
   z-index: 2;
